# pyside6-scintilla

./: .gitattributes  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: add-to-project.yml  ci.yml  docs.yml  publish.yml  wheels.yml
docs/: BINDINGS.md  BUILD.md  alternatives.md  auditing.md  bindings.md  build.md  documenting.md  index.md  reference.md  testpypi.md
docs/examples/: bscintillaedit.md  index.md  pygments_highlighting.md  simple_scintilla_base_edit.md  simple_scintilla_edit.md
docs/highlighting/: lexilla_highlighting.md  pygments_highlighting.md  tree_sitter_highlighting.md
docs/reference/: index.md  message.md  scintilla-document.md  scintilla-edit-base.md  scintilla-edit.md
docs/scintilla/appendix-reference/: building-scintilla.md  deprecated-and-discouraged-messages-and-notifications.md  edit-messages-never-supported-by-scintilla.md  gtk.md  images.md  provisional-messages.md  removed-features.md
docs/scintilla/display/: accessibility.md  annotations.md  brace-highlighting.md  cursor.md  end-of-line-annotations.md  folding.md  indicators.md  line-endings.md  line-wrapping.md  long-lines.md  margins.md  markers.md  mouse-capture.md  other-settings.md  scrolling-and-automatic-scrolling.md  tabs-and-indentation-guides.md  white-space.md  zooming.md
docs/scintilla/documents/: background-loading-and-saving.md  direct-access.md  document-interface.md  multiple-views.md  printing.md
docs/scintilla/editing/: change-history.md  cut-copy-and-paste.md  information.md  overtype.md  text-retrieval-and-modification.md  undo-and-redo.md  undo-save-and-restore.md
docs/scintilla/interaction-commands/: autocompletion.md  call-tips.md  key-bindings.md  keyboard-commands.md  macro-recording.md  popup-edit-menu.md  user-lists.md
docs/scintilla/notifications/: notifications.md
docs/scintilla/selection-search/: multiple-selection-and-virtual-space.md  searching.md  selection.md
docs/scintilla/styling-lexing/: character-representations.md  element-colours.md  lexer-objects.md  lexer.md  selection-caret-and-hotspot-styles.md  style-definition.md  styling.md  words.md
docs/specs/: README.md  mission.md  roadmap.md
docs/stylesheets/: extra.css
examples/: README.md
examples/bscintillaedit/: README.md  bscintillaedit.py  main.py
examples/highlighting/lexilla_highlighting/: README.md  main.py
examples/highlighting/pygments_highlighting/: README.md  main.py  pygments_highlighter.py
examples/highlighting/tree_sitter_highlighting/: README.md  main.py  tree_sitter_highlighter.py
examples/pygments_highlighting/: README.md  main.py  pygments_highlighter.py
examples/simple_scintilla_base_edit/: README.md  main.py
examples/simple_scintilla_edit/: README.md  main.py
src/pyside6_scintilla/: __init__.py  _pyside6_scintilla.pyi
src/pyside6_scintilla/bindings/: CMakeLists.txt  bindings.h  bindings.xml  scintilla_signal_fixes.h
src/scintilla_qt/: CMakeLists.txt
tests/: test_scintilla_document.py  test_scintilla_edit.py  test_scintilla_edit_base.py  test_scintilla_notify.py  test_typing_stubs.py
tools/: README.md  check_docs_sync.py  clean_window_corners.py  generate_pyi.py
