[build-system]
requires = [
    "scikit-build-core>=0.10",
    "shiboken6-generator",
    "shiboken6",
    "PySide6>=6.10",
]
build-backend = "scikit_build_core.build"


[project]
name = "pyside6-scintilla"
dynamic = ["version"]
description = "Permissively-licensed PySide6 bindings for the Scintilla code editor component"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Ioan Călin", email = "iborco@gmail.com" },
]
keywords = [
    "pyside6",
    "scintilla",
    "qt",
    "editor",
    "shiboken6",
    "code-editor",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors",
]
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.10",
]


[project.urls]
Homepage = "https://github.com/borco/pyside6-scintilla"
Repository = "https://github.com/borco/pyside6-scintilla"
Issues = "https://github.com/borco/pyside6-scintilla/issues"


[tool.scikit-build]
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/pyside6_scintilla"]

# Dev-only example apps; not part of the published sdist/wheel.
sdist.exclude = ["examples"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/pyside6_scintilla/__init__.py"


[dependency-groups]
dev = [
    "cmake>=3.25",
    "ninja",
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.8",
    "scikit-build-core>=0.10",
    "shiboken6-generator",
]


# ---------------------------------------------------------------------------
# uv — development environment
# ---------------------------------------------------------------------------

# Build without an isolated env: the CMake configure step needs to find the
# PySide6/shiboken6 CMake packages from the *same* Python environment, which
# only holds for .venv (PySide6 is a runtime dep, shiboken6/shiboken6-generator
# are dev deps — none of these are [build-system].requires).
[tool.uv]
no-build-isolation-package = ["pyside6-scintilla"]


# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]


# ---------------------------------------------------------------------------
# cibuildwheel — wheel builds (Tracer 1: Windows x86_64, single Python version)
# ---------------------------------------------------------------------------

[tool.cibuildwheel]
build = "cp313-win_amd64"
test-requires = ["pytest>=8.0", "pytest-qt>=4.4"]
test-command = "pytest {project}/tests"

[tool.cibuildwheel.windows]
test-environment = { QT_QPA_PLATFORM = "offscreen" }
# Qt6Core, Qt6Gui, Qt6Widgets, and the PySide6/shiboken6 ABI DLLs are provided
# at runtime by the installed PySide6 package (resolved via process-wide
# already-loaded-module lookup, since __init__.py imports PySide6.QtWidgets
# first) - exclude them so delvewheel doesn't bundle conflicting copies from
# the Qt SDK. --ignore-existing lets delvewheel find scintilla_qt.dll and
# Qt6Core5Compat.dll, which are already bundled inside the wheel itself.
repair-wheel-command = "delvewheel repair -w {dest_dir} -v --ignore-existing --exclude Qt6Core.dll --exclude Qt6Gui.dll --exclude Qt6Widgets.dll --exclude pyside6.abi3.dll --exclude shiboken6.abi3.dll {wheel}"


# ---------------------------------------------------------------------------
# ruff (optional linting — remove if not wanted)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py311"
# src/scintilla: vendored upstream source, kept byte-identical to the release tarball.
# _pyside6_scintilla.pyi: generated by tools/generate_pyi.py, not hand-edited or ruff-formatted.
extend-exclude = ["src/scintilla", "src/pyside6_scintilla/_pyside6_scintilla.pyi"]
