[build-system]
requires = [
    "scikit-build-core>=0.10",
    "shiboken6-generator",
    "shiboken6",
    "PySide6>=6.10",
]
build-backend = "scikit_build_core.build"


[project]
name = "pyside6-scintilla"
dynamic = ["version"]
description = "Permissively-licensed PySide6 bindings for the Scintilla code editor component"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Ioan Calin", email = "iborco@gmail.com" },
]
keywords = [
    "pyside6",
    "scintilla",
    "qt",
    "editor",
    "shiboken6",
    "code-editor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors",
]
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.10",
]


[project.urls]
Homepage = "https://borco.github.io/pyside6-scintilla/"
Repository = "https://github.com/borco/pyside6-scintilla"
Issues = "https://github.com/borco/pyside6-scintilla/issues"


[tool.scikit-build]
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
wheel.packages = ["src/pyside6_scintilla"]

# Dev-only example apps; not part of the published sdist/wheel.
sdist.exclude = ["examples"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "src/pyside6_scintilla/__init__.py"


[dependency-groups]
dev = [
    "cmake>=3.25",
    "ninja",
    "pygments>=2.18",
    "pyright>=1.1.410",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "pytest-qt>=4.4",
    "ruff>=0.8",
    "scikit-build-core>=0.10",
    "shiboken6-generator",
    "tree-sitter>=0.25",
    "tree-sitter-python>=0.25",
]
docs = [
    "markdown-callouts>=0.4",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
]


# ---------------------------------------------------------------------------
# uv — development environment
# ---------------------------------------------------------------------------

# Build without an isolated env: the CMake configure step needs to find the
# PySide6/shiboken6 CMake packages from the *same* Python environment, which
# only holds for .venv (PySide6 is a runtime dep, shiboken6/shiboken6-generator
# are dev deps — none of these are [build-system].requires).
[tool.uv]
no-build-isolation-package = ["pyside6-scintilla"]


# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]


# ---------------------------------------------------------------------------
# pyright — type-checks the public API surface (src/pyside6_scintilla) and
# the tests against it; catches typing regressions like a binding class
# leaking its internal name (e.g. ScintillaEditFixed) instead of the public
# one (ScintillaEdit). Excludes src/scintilla (vendored) and examples/ (not
# part of the published package).
# ---------------------------------------------------------------------------

[tool.pyright]
include = ["src/pyside6_scintilla/__init__.py", "tests"]
venvPath = "."
venv = ".venv"


# ---------------------------------------------------------------------------
# cibuildwheel — wheel builds (Windows x86_64, Linux x86_64; aarch64 follow-up)
# ---------------------------------------------------------------------------

[tool.cibuildwheel]
build = "cp31{1,2,3,4}-win_amd64 cp31{1,2,3,4}-manylinux_x86_64 cp31{1,2,3,4}-macosx_arm64 cp31{1,2,3,4}-macosx_x86_64"
test-requires = ["pytest>=8.0", "pytest-qt>=4.4"]
test-command = "pytest {project}/tests"

[tool.cibuildwheel.windows]
test-environment = { QT_QPA_PLATFORM = "offscreen" }
# Qt6Core, Qt6Gui, Qt6Widgets, and the PySide6/shiboken6 ABI DLLs are provided
# at runtime by the installed PySide6 package (resolved via process-wide
# already-loaded-module lookup, since __init__.py imports PySide6.QtWidgets
# first) - exclude them so delvewheel doesn't bundle conflicting copies from
# the Qt SDK. --ignore-existing lets delvewheel find scintilla_qt.dll and
# Qt6Core5Compat.dll, which are already bundled inside the wheel itself.
repair-wheel-command = "delvewheel repair -w {dest_dir} -v --ignore-existing --exclude Qt6Core.dll --exclude Qt6Gui.dll --exclude Qt6Widgets.dll --exclude pyside6.abi3.dll --exclude shiboken6.abi3.dll {wheel}"

[tool.cibuildwheel.linux]
# manylinux_2_34 matches PySide6 6.11.1's own wheel tag
# (manylinux_2_34_x86_64), so `pip install PySide6` inside the build container
# resolves to a compatible wheel.
manylinux-x86_64-image = "manylinux_2_34"
# The manylinux image has no Qt SDK, so install one via aqtinstall (pure
# Python, works with the container's system Python) plus the runtime
# libraries Qt6Gui needs under QT_QPA_PLATFORM=offscreen.
# aqtinstall 3.3.* can't locate Qt 6.11+ (miurahr/aqtinstall#959, same issue
# as the Windows wheels.yml Qt install) - use the patched commit until a
# release containing PR #1000 lands on PyPI. The patched aqtinstall requires
# Python >=3.10, but before-all runs with the container's default Python
# (3.9), so use one of the bundled CPython interpreters instead. The Linux
# desktop arch is "linux_gcc_64" (unlike Windows' "win64_msvc2022_64").
# clang/libxslt: shiboken6-generator's bundled libclang can't locate its
# builtin headers (stddef.h etc., same issue as ci.yml's CLANG_INSTALL_DIR)
# without an installed clang - symlink dnf's clang resource dir under a few
# version numbers since the bundled libclang's version doesn't necessarily
# match dnf's. mesa-libGL/mesa-libEGL/libxkbcommon*/fontconfig: needed for
# Qt6Gui to load under QT_QPA_PLATFORM=offscreen for the test suite.
before-all = "/opt/python/cp313-cp313/bin/pip install git+https://github.com/miurahr/aqtinstall.git@8c3695d4a4e1ceabf6a74dc6c79681656dc6b74b && /opt/python/cp313-cp313/bin/python -m aqt install-qt linux desktop 6.11.1 linux_gcc_64 -m qt5compat -O /opt/qt && dnf install -y mesa-libGL mesa-libEGL libxkbcommon libxkbcommon-x11 fontconfig libxslt clang && RESOURCE_DIR=$(clang -print-resource-dir) && CLANG_DIR=$(dirname $RESOURCE_DIR) && CLANG_VER=$(basename $RESOURCE_DIR) && for v in 18 19 20 21 22 23 24; do [ $v = $CLANG_VER ] || ln -sfn $CLANG_VER $CLANG_DIR/$v; done"
environment = { CMAKE_PREFIX_PATH = "/opt/qt/6.11.1/gcc_64", CLANG_INSTALL_DIR = "/usr" }
test-environment = { QT_QPA_PLATFORM = "offscreen" }
# Qt6Core, Qt6Gui, Qt6Widgets, and the PySide6/shiboken6 shared objects are
# provided at runtime by the installed PySide6 package (same rationale as the
# Windows delvewheel excludes above) - exclude them so auditwheel doesn't
# bundle conflicting copies from the Qt SDK used to build. Qt6Core5Compat in
# turn depends on the ICU libraries (libicui18n/libicuuc/libicudata.so.73)
# from the same Qt SDK build - PySide6's bundled Qt6Core is built against the
# same ICU version and provides these at runtime too, so exclude them as well.
# Everything else scintilla_qt depends on (notably libQt6Core5Compat.so.6)
# gets bundled.
repair-wheel-command = "auditwheel repair -w {dest_dir} --exclude libQt6Core.so.6 --exclude libQt6Gui.so.6 --exclude libQt6Widgets.so.6 --exclude libpyside6.abi3.so.6.11 --exclude libshiboken6.abi3.so.6.11 --exclude libicui18n.so.73 --exclude libicuuc.so.73 --exclude libicudata.so.73 {wheel}"

[tool.cibuildwheel.macos]
# macOS Intel (macos-13) GitHub Actions runners have very limited availability
# (Intel macOS images are on GitHub's deprecation path) and can queue
# indefinitely. Build both architectures on the Apple Silicon macos-latest
# runner instead: arm64 natively, x86_64 cross-built via Rosetta 2 (verified
# locally on an M1 Mac Mini).
archs = ["arm64", "x86_64"]
# cibuildwheel runs macOS builds natively on the runner (no container), so
# install Qt straight to /tmp/qt via aqtinstall, same patched commit as the
# Linux/Windows before-all steps. Qt for macOS desktop ("clang_64") ships
# universal (arm64 + x86_64) binaries, so this one install covers both
# wheel architectures - including the cp313-macosx_x86_64 build, which runs
# under Rosetta 2 on Apple Silicon runners/hosts. Skip if /tmp/qt already
# has it (local iteration on the M1 Mac Mini pre-populates this path).
before-all = "[ -d /tmp/qt/6.11.1/macos ] || (python3 -m pip install --break-system-packages 'aqtinstall @ git+https://github.com/miurahr/aqtinstall.git@8c3695d4a4e1ceabf6a74dc6c79681656dc6b74b' && python3 -m aqt install-qt mac desktop 6.11.1 clang_64 -m qt5compat -O /tmp/qt)"
# Qt 6.11's QtCore5Compat.framework has a minimum target of macOS 13.0 -
# bump MACOSX_DEPLOYMENT_TARGET to match (cibuildwheel's arm64 default is
# 11.0), so delocate doesn't reject the wheel and the resulting wheel tag
# (macosx_13_0_arm64) accurately reflects what it needs.
environment = { CMAKE_PREFIX_PATH = "/tmp/qt/6.11.1/macos", MACOSX_DEPLOYMENT_TARGET = "13.0" }
test-environment = { QT_QPA_PLATFORM = "offscreen" }
# QtWidgets.framework, QtGui.framework, QtCore.framework, libpyside6 and
# libshiboken6 aren't bundled in the wheel - they're provided at runtime by
# the installed PySide6 package (same rationale as the Linux/Windows
# excludes above). delocate's dependency scan can't resolve these @rpath
# references (they only resolve once PySide6 is actually installed next to
# pyside6_scintilla), so it errors out unless told to skip what it can't
# find. Everything delocate *can* resolve - i.e. files actually bundled in
# the wheel, like QtCore5Compat.framework - is still delocated normally.
repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} --ignore-missing-dependencies -w {dest_dir} -v {wheel}"


# ---------------------------------------------------------------------------
# ruff (optional linting — remove if not wanted)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 120
target-version = "py311"
# src/scintilla: vendored upstream source, kept byte-identical to the release tarball.
# _pyside6_scintilla.pyi: generated by tools/generate_pyi.py, not hand-edited or ruff-formatted.
extend-exclude = ["src/scintilla", "src/pyside6_scintilla/_pyside6_scintilla.pyi"]
